# Practika

./: .gitignore  Loading_the_library.bat  Practika.sln  README.md  Starting_the_server.bat  Starting_the_server.txt  pyproject.toml
Practika/: Practika.pyproj  api.py  api_gelete.py  api_get.py  end_points.py  main.py  models.py  pydantic_class.py  schemas.py  sqlalchemy_class.py  tests.py
Practika/Migration/: Starting_the_migtation.bat  Starting_the_migtation.bat.bak  Starting_the_server.txt  alembic.ini  database_config.ini.bak  db.py  go_migration.py  sqlalchemy_class - Copy - Copy.py  sqlalchemy_class.py
Practika/Migration/alembic/: database_config.ini  env.py
Practika/migration/: database_config.ini  db.py
Practika6Semestr/: GitHubComand.docx  HTML.docx  SQLAlchemyClass(py).docx  usecase.drawio  Задание на практику.docx  Комнады для создание проекта poerty (загрузка на GitHub).docx  Не известые тебе ошибки.docx  Регистрация.docx  Теория.docx  Теория2.docx  Тесты.docx  Эндпоинты.docx  модели.drawio
Practika6Semestr/PractikaReady/: PractikaReady.sln
Practika6Semestr/PractikaReady/PractikaReady/: EndPoints - Copy.py  EndPoints.py  JWT - Copy - Copy - Copy.py  JWT - Copy - Copy.py  JWT - Copy.py  JWT.py  PractikaReady.pyproj  PydanticClass.py  SQLAlchemyClass - Copy.py  SQLAlchemyClass.py  checking_EndPoints.py  register.py  upDateEmail.py  (+1 more)
Practika6Semestr/Документы для предприятия/: Оценочный лист.docx  Рабочий график (план) проведения практики.docx  Титульный практика 3 курс.docx  индивидуальное задание на практику.docx
НАДО СКАЧАТЬ/: НАДО СКАЧАТЬ.txt
(+62 files in other folders)
