[tool.poetry]
name = "githubpractika6semestr"
version = "0.1.0"
description = ""
authors = ["Vladimir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
datetime = "^5.1"
uvicorn = "^0.22.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
alembic = "^1.11.1"
configparser = "^5.3.0"
fileconfig = "^0.6.1"
pool = "^0.1.2.dev0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
